--- a/style.css
+++ b/style.css
@@ -6,9 +6,16 @@ header {
 header nav {
   font-family: arial;
   position: absolute;
-  top: 5%;
+  top: 4%;
   right: 20%;
 }
+
+#blackBox {
+    top: 0px;
+    width: 100%;
+    height: 80px;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
 
 header nav li {
   display: inline;
@@ -16,7 +23,12 @@ header nav li {
   font-weight:bold;
   text-transform: uppercase;
   color: white;
-  margin-right: 40px;
+  margin-right: 70px;
+}
+
+header img {
+  padding-top: 12%;
+  padding-bottom: 12%;
 }
 
 .logo {
@@ -31,11 +43,26 @@ header nav li {
   background-color: #F7F7F7;
 }
 
+#welcomeDiv {
+  background-color: #F6EFBF;
+  padding-top: 4%;
+  padding-bottom: 4%;
+  text-align: center;
+  font-family: arial;
+  font-size: 30px;
+}
+
+#welcomeDiv h2 {
+  font-family: arial;
+  font-size: 32px;
+  font-weight: bold;
+}
+
 .titulocafes {
   font-family: arial;
   padding: 20px;
   margin-left: 200px;
-  font-size: 30px;
+  font-size: 32px;
   font-weight: bold;
 }
 
